# ytgrid

./: .env  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  run_load_test.py  setup.py  supervisord.conf  test.csv
.github/workflows/: docker-update.yml  publish.yml
automation/: browser_manager.py  player.py  requirements.txt
backend/: database.py  main.py  models.py  requirements.txt
backend/routes/: sessions.py  status.py
cli/: cli.py  session_manager.py
examples/: example_api.py  example_cli.py
tests/: test.csv  test_api.py  test_api_endpoints.py  test_automation.py  test_cli.py  test_cli_commands.py
ytgrid/: __init__.py  cli.py
ytgrid/automation/: __init__.py  base_player.py  browser.py  player.py
ytgrid/backend/: __init__.py  celery_app.py  dependencies.py  main.py  routes.py  session_store.py  task.py  task_manager.py  tasks.py
ytgrid/backend/routes/: __init__.py  session.py  task.py
ytgrid/utils/: __init__.py  config.py  logger.py  setup.py
